objects/Product_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Exceptions</relationshipLabel>
        <relationshipName>Product_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Brand__c</fullName>
        <globalPicklist>Product_Brand</globalPicklist>
        <label>Product Brand</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <globalPicklist>Product_Category</globalPicklist>
        <label>Product Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Brand__c</fullName>
        <globalPicklist>Product_Sub_Brand</globalPicklist>
        <label>Product Sub Brand</label>
        <type>Picklist</type>
    </fields>
    <label>Product Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Product Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>